# rust-auth-axum

./: .env  Cargo.toml  Feedback App.postman_collection.json  README.md
src/: handlers.rs  jwt.rs  main.rs  route.rs
